src/objects/Email_Object__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Email_Objects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <description>This is created to store the attachment id of the email content</description>
        <label>Attachment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMAIL__c</fullName>
        <label>EMAIL</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Attachment_Content__c</fullName>
        <label>Email Attachment Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Body__c</fullName>
        <label>Email_Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Message_Type__c</fullName>
        <label>Email Message Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Email</fullName>
                </value>
                <value>
                    <fullName>Mass Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Status__c</fullName>
        <label>Email Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent Email</fullName>
                </value>
                <value>
                    <fullName>Replied Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email_Subject</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Type__c</fullName>
        <label>Email_Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal Email</fullName>
                </value>
                <value>
                    <fullName>Work Email</fullName>
                </value>
                <value>
                    <fullName>--None--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mail_Attachment__c</fullName>
        <description>to store the email attachment send with the email</description>
        <label>Mail Attachment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Email Tracking</relationshipLabel>
        <relationshipName>Email_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReplyEmailContenetPdf__c</fullName>
        <label>ReplyEmailContenetPdf</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplyEmailContentPdf__c</fullName>
        <formula>HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot;+ReplyEmailContenetPdf__c,&quot;Reply Pdf&quot;,&quot;_parent&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReplyEmailContentPdf</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_Attachment__c</fullName>
        <formula>IF(AND(Attachment__c&lt;&gt;null,Attachment__c&lt;&gt;&apos;&apos;), HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot;+Attachment__c,&quot;Sent/Reply Attachment&quot;,&quot;_parent&quot; ), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sent Attachment</label>
        <type>Text</type>
    </fields>
    <label>Email Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>EMAIL__c</columns>
        <columns>Email_Type__c</columns>
        <columns>Email_Subject__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ET-{00000000}</displayFormat>
        <label>Email_Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>